# kepler.py

./: .copier-answers.yml  .envrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  pyproject.toml.rej  setup.py  setup.py.rej
.github/workflows/: python-package.yml  release.yml  tests.yml
src/kepler/: __init__.py  core.py  kepler.cc
src/lib/: main.cpp
tests/: test_kepler.py  test_kepler.py.rej
